used constants for lead source ids.

--- a/app/views/layouts/_landing_footer.erb
+++ b/app/views/layouts/_landing_footer.erb
@@ -40,7 +40,7 @@
 
     <h3>Industry Friends</h3>
     <ul>
-      <%= content_tag :li, link_to('Circle Institute', 'https://www.circeinstitute.org/blog', target:'_blank') %>
+      <%= content_tag :li, link_to('Rivendell Scholarship Fund', 'http://www.takebackeducation.org', target:'_blank') %>
       <%= content_tag :li, link_to('Classical Conversations', 'https://www.classicalconversations.com/articles', target:'_blank') %>
       <%= content_tag :li, link_to('Summit Ministries', 'http://www.summit.org/blogs/the-presidents-desk/', target:'_blank') %>
       <%= content_tag :li, link_to('BreakPoint', 'http://thepoint.breakpoint.org/tp-home', target:'_blank') %>
