--- a/app/views/shared/_partners.erb
+++ b/app/views/shared/_partners.erb
@@ -2,8 +2,7 @@
 
   <div class="row">
     <div class="col-md-12">
-      <h3>Our education partners</h3>
-      <p>We are a regionally accredited program of San Diego Christian and the Western Association of Schools and Colleges.</p>
+      <p class="lead">We are a regionally accredited program of San Diego Christian and the Western Association of Schools and Colleges.</p>
       <div class="logos">
         <%= image_tag 'SDCC-logo.png' %>
         <%= image_tag 'WASC-logo.png' %>
