--- a/app/views/site_pages/academics.html.erb
+++ b/app/views/site_pages/academics.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
 
     <div class="row header">
-      <h3>Journey Through the College Core</h3>
+      <h3>Journey through an exceptional college core curriculum.</h3>
       <p><strong>8 ways</strong> you experience the liberal arts with the SDC Rivendell Program:</p>
     </div>
 
@@ -27,7 +27,7 @@
               <h4>Learn the college core <strong><i>Christianly</i></strong></h4>
               <p>Study all subjects from a biblical worldview perspective.</p>
               <ul>
-                <li>Hear God's voice in every discipline</li>
+                <li>Hear God’s voice in every subject</li>
                 <li>Connect life with all of scripture</li>
                 <li>Buttress a defense of your faith</li>
               </ul>
@@ -47,7 +47,7 @@
               <p>Study the liberal arts one subject at a time in the flow of the biblical narrative.</p>
               <ul>
                 <li>Generate a love for learning</li>
-                <li>Intake the unity of knowledge</li>
+                <li>Reveal the unity of knowledge</li>
               </ul>
               <%= content_tag :p, academics_read_more_link('sequentially') %>
             </div>
@@ -145,7 +145,7 @@
               <ul>
                 <li>Develop habits of character</li>
                 <li>Polish life skills essential for success</li>
-                <li>Become a Student of Honor<sup><small>TM</small></sup></li>
+                <li>Graduate as a Student of Honor<sup><small>TM</small></sup></li>
               </ul>
               <%= content_tag :p, academics_read_more_link('holistically') %>
             </div>
