--- a/app/views/layouts/_landing_footer.erb
+++ b/app/views/layouts/_landing_footer.erb
@@ -53,7 +53,7 @@
 <div class="row credits">
 
   <div class="col-md-12">
-    Copyright &copy; Rivendell Education Company | Website by
+    Copyright &copy; 2015 | Website by
     <%= link_to 'Red Sherpa', 'http://www.sherpa.red', target:'_blank' %>
   </div>
 
