--- a/app/views/leads/new.html.erb
+++ b/app/views/leads/new.html.erb
@@ -2,12 +2,10 @@
 
   <div class="row header">
     <div class="col-md-12">
-      <h3 class="logo">
-        <%= link_to 'Rivendell', root_path %>
-      </h3>
-      <h4>Request a free brochure from Rivendell today.</h4>
+      <h4>Yes, I would like to receive more information.</h4>
       <p>
-        Your application fee will be waived if you apply within 30 days.
+        Use the form below to request a free brochure and your application fee will be
+        waived if you apply within 30 days!”
       </p>
     </div>
   </div>
