--- a/app/views/shared/_partners.erb
+++ b/app/views/shared/_partners.erb
@@ -2,10 +2,12 @@
 
   <div class="row">
     <div class="col-md-12">
-      <p class="lead">We are a regionally accredited program of San Diego Christian and the Western Association of Schools and Colleges.</p>
+      <p class="lead">
+        San Diego Christian College is accredited by the Senior Commission of the Western Association of Schools and Colleges.
+      </p>
       <div class="logos">
-        <%= image_tag 'SDCC-logo.png' %>
-        <%= image_tag 'WASC-logo.png' %>
+        <%= link_to image_tag('SDCC-logo.png'), 'http://sdcc.edu/academics/accreditation', target:'_blank' %>
+        <%= link_to image_tag('WASC-logo.png'), 'http://www.wascsenior.org/', target:'_blank' %>
       </div>
     </div>
   </div>
