--- a/app/views/shared/_testimonials.erb
+++ b/app/views/shared/_testimonials.erb
@@ -31,7 +31,7 @@
       <div class="testimonial">
         <div class="quote">
           Education at its best is learning to learn. The Rivendell Program has been established around this
-          approach to education, and I heartily endorse their program of study. At Rivendell, the old cliché of “teaching kids
+          approach to education, and I heartily endorse this program of study. The old cliché of “teaching kids
           how to think, not what to think” is not a cliché – it actually happens."
           <div class="arrow-down">
             <%= content_tag :div, nil, class:'arrow' %>
