--- a/app/views/site_pages/about.html.erb
+++ b/app/views/site_pages/about.html.erb
@@ -3,21 +3,42 @@
 
     <div class="row header">
       <div class="col-md-12">
-        <h3>About us</h3>
+        <h3>About San Diego Christian College (SDC)</h3>
+
         <p>
-          Rivendell 5 Pursuits Program is an accredited program of San Diego Christian.
+          San Diego Christian College provides an excellent liberal arts education that
+          thrives on making the Bible come alive. Our faculty and administration desire each
+          and every student to purposefully seek after God in all they do, to pursue an
+          incredible educational experience and to learn how to become the next generation
+          of Godly leaders.Rivendell 5 Pursuits Program is an accredited program of San
+          Diego Christian.
         </p>
+
         <p>
-          San Diego Christian’s Minnesota Campus is located in Bloomington, MN, a suburb of the Twin
-          Cities metropolitan area. Our beautiful 40-acre campus sits on a wooded bluff just north of the
-          Minnesota River and just west of the Minnesota Valley Country Club.
+          SDC’s main campus is located in beautiful Southern California, where you can earn
+          your bachelor’s degree after completing your first 16-months of college in our
+          Exceptional College Core Program located in Minnesota!
         </p>
+
         <p>
-          Our city, Bloomington, is the fifth largest in Minnesota, offering a great balance of urban
-          convenience and open spaces. While it is home to the country’s largest shopping center –
-          the Mall of America – and the Minneapolis/St. Paul International Airport, it also features more
-          than 100 parks, and just as many lakes and ponds.
+          SDC’s  Minnesota Campus is located in Bloomington, a suburb of the Twin Cities
+          metropolitan area. Our striking 40-acre campus sits on a wooded bluff just north
+          of the Minnesota River and just west of the Minnesota Valley Country Club.
         </p>
+
+        <p>
+          Our city, Bloomington, is the fifth largest in Minnesota, offering a great balance
+          of urban convenience and open spaces. While it is home to the country’s largest
+          shopping center – the Mall of America – and the Minneapolis/St. Paul International
+          Airport, it also features more than 100 parks, and just as many lakes and ponds.
+        </p>
+
+        <p>
+          Learn more about
+          <%= link_to "San Diego Christian’s Mission and Vision", 'http://sdcc.edu/about-sdcc/mission-and-values',
+                      target:'_blank' %>.
+        </p>
+
       </div>
     </div>
 
@@ -42,30 +63,7 @@
     <div class="row">
 
       <div class="col-md-6">
-        <h1>San Diego Christian's Institution Mission</h1>
-        <p>
-          The mission of San Diego Christian College is to engage Christians in an academic community that
-          offers a liberal arts education, promotes an environment of scholarship, and fosters the examination
-          of truth, preparing them to influence the world through Godly character within a framework of the
-          authority and inerrancy of Scripture.
-        </p>
-      </div>
-
-      <div class="col-md-6">
-        <h1>San Diego Christian’s Institution Value Statement</h1>
-       <p>
-         San Diego Christian College values a biblically integrated liberal arts education, by developing
-         students’ lives for the glory of God and creating a relational environment conducive to enhancing
-         the potential of individuals as they serve Christ.
-       </p>
-      </div>
-
-    </div>
-
-    <div class="row">
-
-      <div class="col-md-6">
-        <h1>Rivendell 5 Pursuits Program Mission</h1>
+        <h1>Rivendell Program Mission</h1>
         <p>
           To bring clarity and stability to young men and women caught in an age of confusion and uncertainty
           by providing them the intellectual, spiritual, moral, social, emotional, and physical foundations
@@ -75,7 +73,7 @@
       </div>
 
       <div class="col-md-6">
-        <h1>Rivendell 5 Pursuits Program Vision</h1>
+        <h1>Rivendell Program Vision</h1>
         <p>
           To restore all things to Christ by imparting the biblical worldview to thousands of students in
           multiple locations in America and around the world who will go on to serve God and mankind in every
@@ -159,7 +157,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="wrapper clearfix">
-          <h4>Learn more about the Rivendell and San Diego Christian partnership:</h4>
+          <h4>Learn more about the Rivendell Program and our Minnesota campus:</h4>
           <%= link_to 'Request a brochure', new_lead_path, class:'button button-small' %>
         </div>
       </div>
