--- a/app/views/site_pages/academics.html.erb
+++ b/app/views/site_pages/academics.html.erb
@@ -3,7 +3,7 @@
 
     <div class="row header">
       <h3>Journey through an exceptional college core curriculum.</h3>
-      <p><strong>8 ways</strong> you experience the liberal arts with the SDC Rivendell Program:</p>
+      <p><strong>8 ways</strong> you experience the liberal arts with the Rivendell Program:</p>
     </div>
 
     <div class="row">
