--- a/app/views/site_pages/christianly.html.erb
+++ b/app/views/site_pages/christianly.html.erb
@@ -21,9 +21,7 @@
         <div class="content">
 
           <p>
-            By design, the SDC Rivendell 5 Pursuits Program aims at offering an innovative approach to Liberal Arts education
-            that is intentionally informed by Christian theism.  Rivendell assumes that Liberal Arts Education
-            begins with a peculiar orientation, i.e. Christian theism.
+            Experience an innovative approach to Liberal Arts education that is intentionally informed by Christian theism.
           </p>
 
           <p>
