--- a/app/views/site_pages/communally.html.erb
+++ b/app/views/site_pages/communally.html.erb
@@ -11,7 +11,7 @@
       <div class="col-md-10 post">
 
         <div class="title">
-          Experience the college core <strong><em>communally</em></strong>
+          Experience the college core <strong><em>Communally</em></strong>
         </div>
         <div class="author">
           “The next best thing to being wise oneself is to live in a circle of those who are.” ― C.S. Lewis
