--- a/app/views/site_pages/sequentially.html.erb
+++ b/app/views/site_pages/sequentially.html.erb
@@ -11,13 +11,13 @@
       <div class="col-md-10 post">
 
         <div class="title">
-          Progress through the college core <strong><em>sequentially</em></strong>
+          Progress through the college core <strong><em>Sequentially</em></strong>
         </div>
 
         <div class="content">
 
           <p>
-            For a true College Core program to succeed it must be tied to a Great Story that supplies both
+            For a true college core program to succeed it must be tied to a Great Story that supplies both
             young and old the reason to learn. Our Story is God’s Story.
           </p>
 
@@ -52,9 +52,8 @@
           </p>
 
           <p>
-            SDC Rivendell employs sequenced-modular education, where the College Core is studied one subject
-            at a time in a sequence that follows the flow of the biblical narrative. Rivendell’s academic
-            semesters, illustrated below, are listed in the order students study them.
+            Study one subject at a time in a sequence that follows the flow of the biblical narrative. The Rivendell
+            programs academic semesters, illustrated below, are listed in the order students study them.
 
             <%= image_tag 'our_method.jpeg', class:'img-responsive' %>
           </p>
