--- a/app/views/layouts/_footer.erb
+++ b/app/views/layouts/_footer.erb
@@ -11,7 +11,7 @@
   </div>
 
   <div class="col-sm-5 copyright">
-    Copyright &copy; Rivendell Worldview Education Company
+    Copyright &copy; 2015
   </div>
 
 </div>
