more adcc changes.

--- a/app/views/site_pages/classically.html.erb
+++ b/app/views/site_pages/classically.html.erb
@@ -11,17 +11,17 @@
       <div class="col-md-10 post">
 
         <div class="title">
-          Approach the college core <strong><em>classically</em></strong>
+          Approach the college core <strong><em>Classically</em></strong>
         </div>
         <div class="author">
           "We have abandoned those ideals once animating our civilization, refusing to learn them anew with each generation.
-          We have assumed their transfer to be automatic." - Octavius Davis
+          We have assumed their transfer to be automatic." - Davis Norment
         </div>
 
         <div class="content">
 
           <p>
-            To become the best students possible they must study the best works available. SDC Rivendell utilizes
+            To become the best students possible they must study the best works available. We utilize
             a contemporary and historical “Great Books” curriculum rather than the standard textbook-based
             curriculum. While textbooks come and go, the “Great Books” are the literary, scientific, political
             and social classics that have stood the test of time and are proven to have had the greatest
@@ -54,7 +54,7 @@
           </p>
 
           <p>
-            However, what makes SDC Rivendell’s “Great Books” curriculum truly exceptional is the amount of
+            However, what makes our “Great Books” curriculum truly exceptional is the amount of
             time and emphasis placed on studying “The Greatest Book,” The Holy Scriptures. The Bible is
             the blueprint for reality and the ultimate authoritative source. It has been the single most
             influential book in the formation of Western Civilization and the basis for remaining a free and
