--- a/app/views/site_pages/critically.html.erb
+++ b/app/views/site_pages/critically.html.erb
@@ -11,7 +11,7 @@
       <div class="col-md-10 post">
 
         <div class="title">
-          Think through the college core <strong><em>critically</em></strong>
+          Think through the college core <strong><em>Critically</em></strong>
         </div>
         <div class="author">
           “We are not a cog in a machine, … not a piece of theater; [we] really can influence history." - Francis Schaeffer
@@ -42,7 +42,7 @@
           </blockquote>
 
           <p>
-            SDC Rivendell’s entire academic program is structured around this principle – teaching students “how
+            Our entire academic program is structured around this principle – teaching students “how
             to learn” in order that they may become life-long students.  Spoon-feeding information is
             minimized. We believe learning is essentially an activity that the students do within themselves
             and that they are the primary agents in their education.  Therefore, in the beginning students
@@ -71,7 +71,7 @@
           </p>
 
           <p>
-            The Rivendell Critical Thinking Method exhorts freshman to perform graduate level work.  We start
+            Our critical thinking method exhorts freshman to perform graduate level work.  We start
             slowly and proceed to increasingly difficult texts.
           </p>
 
