--- a/app/views/site_pages/globally.html.erb
+++ b/app/views/site_pages/globally.html.erb
@@ -11,7 +11,7 @@
       <div class="col-md-10 post">
 
         <div class="title">
-          Journey through the college core <strong><em>globally</em></strong>
+          Journey through the college core <strong><em>Globally</em></strong>
         </div>
         <div class="author">
           “Broad, wholesome, charitable views of men and things cannot be acquired by vegetating in one little corner
@@ -34,7 +34,7 @@
           </p>
 
           <p>
-            SDC Rivendell provides the opportunity to break out of your shell, embrace new cultures, expand your
+            Our program provides the opportunity to break out of your shell, embrace new cultures, expand your
             palette and yes, even enlarge your resume as companies look for overseas experience.
           </p>
 
