--- a/app/views/site_pages/holistically.html.erb
+++ b/app/views/site_pages/holistically.html.erb
@@ -11,7 +11,7 @@
       <div class="col-md-10 post">
 
         <div class="title">
-          Practice the college core <strong><em>holistically</em></strong>
+          Practice the college core <strong><em>Holistically</em></strong>
         </div>
         <div class="author">
           "The aim of a college education is to teach you to know a good man when you see one." - William James
@@ -31,7 +31,7 @@
           </p>
 
           <p>
-            When Western Civilization embraced the existence of a moral God,  education was defined more
+            When western civilization embraced the existence of a moral God,  education was defined more
             broadly.  It was more than cognitive knowledge.  It was more than the accumulation of information,
             data, and facts.  Historically, education was holistic. It was about growing intellectually,
             morally, socially, and spiritually as a person.  Classical education took into account a person’s
@@ -95,10 +95,9 @@
           </p>
 
           <p>
-            Rather than developing one aspect of the person, namely, the intellect, SDC Rivendell believes the
-            best education is one that develops every aspect of a person. As such, our program includes: a
-            rigorous academic pursuit, spiritual formation, holy and healthy living, community service and
-            life skills, detailed in the tabs below.
+            Rather than developing one aspect of the person, namely, the intellect, the best education is one that
+            develops every aspect of a person. As such, our program includes: a rigorous academic pursuit, spiritual
+            formation, holy and healthy living, community service and life skills, detailed in the tabs below.
           </p>
 
           <%= content_tag :p, nil %>
