--- a/app/views/site_pages/socratically.html.erb
+++ b/app/views/site_pages/socratically.html.erb
@@ -11,7 +11,7 @@
       <div class="col-md-10 post">
 
         <div class="title">
-          Discuss the college core <strong><em>socratically</em></strong>
+          Discuss the college core <strong><em>Socratically</em></strong>
         </div>
         <div class="author">
           “The comprehensive mind is always dialectical.” ― Plato
@@ -20,9 +20,9 @@
         <div class="content">
 
           <p>
-            SDC Rivendell believes students are to be active learners, not passive recipients of information.
+            Our staff and faculty believe students are to be active learners, not passive recipients of information.
             Therefore, we take an unconventional approach regarding the classroom.  Traditionally, the
-            classroom is reserved for lectures.  In the SDC Rivendell Program, lectures take place outside the
+            classroom is reserved for lectures.  In the Rivendell Program, lectures take place outside the
             classroom in the form of assigned readings.  Students learn to read texts (primarily the Great
             Books) as a lecture, given by one of the history’s most brilliant minds.  Therefore, when coming
             to class having read an assigned text, students have in essence already participated in lecture.
@@ -69,7 +69,7 @@
           </p>
 
           <p>
-            What makes Rivendell's Socratic style of teaching exceptional is its firm foundation in God’s Holy Scriptures.
+            What makes our Socratic style of teaching exceptional is its firm foundation in God’s Holy Scriptures.
             Jeff Baldwin again in his essay writes,
           </p>
 
