--- a/app/views/site_pages/communally.html.erb
+++ b/app/views/site_pages/communally.html.erb
@@ -20,20 +20,19 @@
         <div class="content">
 
           <p>
-            For those of us raised within the extreme individualism of Western Civilization, “authentic
-            community” is a difficult concept to grasp.  Rivendell is truly unique when it comes to
-            understanding and experiencing the power of a Christian community.
+            San Diego Christian College is truly unique when it comes to understanding and experiencing the power of a
+            Christian community.
           </p>
 
           <p>
-            SDC Rivendell employs IN-COMM education, where learning takes place withIN-COMMunity.  Fifteen to
+            The Rivendell program on our Minnesota Campus employs IN-COMM education, where learning takes place withIN-COMMunity.  Fifteen to
             thirty students, two faculty and one mentor embark on an educational journey together, remaining
             a unit for the duration of the program.  In other words, students never change classes, classmates
             or professors.
           </p>
 
           <p>
-            Patterned after Jesus’ discipleship model,’ SDC Rivendell’s cohort education encourages a more
+            Patterned after Jesus’s discipleship model, our cohort education encourages a more
             dynamic, collaborative, and supportive learning environment.
           </p>
 
