last set of adcc changes

--- a/app/views/site_pages/_credits_pane.erb
+++ b/app/views/site_pages/_credits_pane.erb
@@ -3,18 +3,20 @@
   <h4>Transferring credits to San Diego Christian</h4>
 
   <p>
-    Because the SDC Rivendell program is so unique, and because Rivendell’s Sequenced Modular Education™ is a
+    Because the Rivendell program is so unique, and because our Sequenced Modular Education™ is a
     standalone curriculum, we cannot apply academic credits completed at other colleges or universities toward
-    our Associate of Arts degree. Since we offer one continuous 16-month program, students can neither join
+    our Associate of Arts degree program in Minnesota. Since we offer one continuous 16-month program, students can neither join
     a program midway nor opt out of a class because they have completed similar coursework elsewhere. However,
-    any credits previously earned can be transferred in towards a major at San Diego Christian.
+    any credits previously earned can be transferred towards a major at
+    <%= link_to 'San Diego Christian', 'http://www.sdcc.edu', target:'_blank' %>.
   </p>
 
-  <h4>Transferring credits from San Diego Christian</h4>
+  <h4>Transferring credits from The Rivendell Program</h4>
 
   <p>
     San Diego Christian has several unique majors and programs. SDC Rivendell program students can go to the main
-    campus in Santee, CA to complete their bachelor’s degree.
+    campus in Santee, CA to complete their bachelor’s degree.  Learn more at
+    <%= link_to 'at www.sdcc.edu', 'http://www.sdcc.edu', target:'_blank' %>.
   </p>
 
 </div>
