--- a/app/views/site_pages/_life_skills.erb
+++ b/app/views/site_pages/_life_skills.erb
@@ -11,7 +11,7 @@
 
 <p>
   The collapse of the family, the loss of a moral code and the media’s constant promotion of bad behavior
-  have lowered traditional standards of manners, etiquette and respect to an all time low. Rivendell aims
+  have lowered traditional standards of manners, etiquette and respect to an all time low. Staff and Faculty aim
   to restore the lost art of manners, etiquette, respect and other nuances of civility.  Our desire is to
   see future spouses, parents and citizens counter this trend.
 </p>
