--- a/app/views/site_pages/_tuition_pane.erb
+++ b/app/views/site_pages/_tuition_pane.erb
@@ -1,13 +1,15 @@
 <div class="col-md-6 info">
 
   <h4>All-inclusive college experience</h4>
+
   <p>
-    SDC Rivendell 5 Pursuits Program is an “all-inclusive” college experience. There are four total
+    San Diego Christian’s Rivendell program on our Minnesota campus is an “all-inclusive” college experience.  There are four total
     semesters in the program. Our goal is to be as cost effective as possible for our students
     while offering a high value program including features such as study abroad, cultural events,
     etc. We feel these included features are not only beneficial, but essential in equipping
     exceptional students to become extraordinary citizens.
   </p>
+
   <p>
     Please see our <%= link_to 'financial aid tab', '#fin-aid', data: { toggle:'tab' } %> to learn more about the different
     ways you can fund your experience through scholarships, grants, and loans.
@@ -22,6 +24,7 @@
 <div class="col-md-12 info">
 
   <h5>Learning Experience (All-inclusive tuition):</h5>
+
   <ul>
     <li>Tuition</li>
     <li>All books and course materials</li>
@@ -35,11 +38,13 @@
     <li>Administrative Fee</li>
     <li>Graduation Fee</li>
   </ul>
+
   <p class="font-bold">
     The cost per semester for the All-Inclusive Tuition is $11,975.
   </p>
 
   <h5>Living Experience (All-Inclusive Room & Board):</h5>
+
   <ul>
     <li>Room: Traditional residence halls for men, apartment-style residence halls for women while in Minnesota</li>
     <li>Room: All accommodations in Italy (Venice, Florence, and Rome)</li>
@@ -60,11 +65,13 @@
     <li>Laundry</li>
     <li>Campus Security Fee and Student ID; RAVE Emergency Alert System</li>
   </ul>
+
   <p class="font-bold">
     The cost per semester for the All-Inclusive Room & Board is $3,995.
   </p>
 
   <h4>Required for all enrolled students:</h4>
+
   <ul>
     <li>
       Personal Laptop: Must be compatible with Windows software; Mac users must install VMWare Fusion prior to arriving on campus
@@ -78,12 +85,14 @@
   </ul>
 
   <h4>Optional expenses:</h4>
+
   <ul>
     <li>Campus Parking Permit: $100 per semester (non-refundable)</li>
     <li>Personal expenses, including transportation to/from home for semester breaks, etc.</li>
   </ul>
 
   <h4>Deposits (One-Time):</h4>
+
   <ul>
     <li>U.S. Student Enrollment Reservation Deposit (applied to first semester tuition): $500</li>
     <li>
@@ -91,7 +100,8 @@
       This deposit is fully refundable should an International student’s visa application be denied.): $1000</li>
   </ul>
 
-  <h4>SDC Rivendell’s Tuition Lock Guarantee:</h4>
+  <h4>Tuition Lock Guarantee:</h4>
+
   <p>
     The cost of tuition will remain the same throughout the four consecutive semesters of a student’s
     enrollment. This tuition lock is voided if a student withdraws from the program for any reason and
