--- a/app/views/site_pages/apply_now.html.erb
+++ b/app/views/site_pages/apply_now.html.erb
@@ -3,7 +3,7 @@
 
     <div class="row header">
       <div class="col-md-12">
-        <h3>Apply to the SDC Rivendell 5-Pursuits Program</h3>
+        <h3>Apply to the Rivendell Program</h3>
 
         <p>Complete the form below and we will send you instructions on completing your application.</p>
       </div>
