--- a/app/views/site_pages/student_life.html.erb
+++ b/app/views/site_pages/student_life.html.erb
@@ -2,8 +2,7 @@
   <div class="container">
 
     <div class="row header">
-      <h3>Student Life at SDC Rivendell</h3>
-      <p>We prepare students for life, not just a job.</p>
+      <h3>Looking for a college where student life is part of the curriculum?</h3>
     </div>
 
     <div class="row">
@@ -73,8 +72,7 @@
 
     <div class="row header">
       <div class="col-md-12">
-        <h2>Looking for a college where student life is part of the curriculum?</h2>
-        <p>Student life is a vital component part of your SDC Rivendell experience.</p>
+        <h2>Student life is a vital component of your college core experience.</h2>
       </div>
     </div>
 
@@ -100,7 +98,7 @@
       <div class="col-md-6 info">
         <h4>Health and fitness.  They're also part of our curriculum.</h4>
         <p>
-          Part of the SDC Rivendell program involves getting students out of their chairs and away from their books. Students
+          Part of the our program involves getting students out of their chairs and away from their books. Students
           participate in a variety of sports such as basketball, volleyball, ultimate Frisbee, dodge-ball, flag football,
           and soccer. If intramural sports are not your thing, various student-organized exercise regimens such as running,
           walking, hiking, biking, and aerobics are also available. Either way, the object is to get the heart pumping in an
