--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -14,11 +14,14 @@
 
     <div class="row">
       <div class="col-md-8 message">
+
         <h3>Send us a message</h3>
+
         <p>
-          You can contact us with anything related to Rivendell 5-Pursuits Program.<br/>
+          You can contact us with anything related to San Diego Christian's Rivendell Program.<br/>
           We'll get in touch with you as soon as possible.
         </p>
+
         <%= render 'form' %>
       </div>
 
