changed academics content

--- a/app/views/site_pages/academics.html.erb
+++ b/app/views/site_pages/academics.html.erb
@@ -46,6 +46,7 @@
               <h4>Progress through the college core <strong><i>sequentially</i></strong></h4>
               <p>Study the liberal arts one subject at a time in the flow of the biblical narrative.</p>
               <ul>
+                <li>Enhance academic performance</li>
                 <li>Generate a love for learning</li>
                 <li>Reveal the unity of knowledge</li>
               </ul>
@@ -94,7 +95,7 @@
               <p>Learn a critical thinking method and apply it every day to every subject and assignment.</p>
               <ul>
                 <li>Learn how to learn</li>
-                <li>Generate a cultural critique</li>
+                <li>Generate a cultural critic</li>
                 <li>Transform from a passive think to a master thinker</li>
               </ul>
               <%= content_tag :p, academics_read_more_link('critically') %>
@@ -124,9 +125,9 @@
               <h4>Discuss the college core <strong><i>socratically</i></strong></h4>
               <p>Question and discuss subjects instead of listening to lectures.</p>
               <ul>
-                <li>Learn actively</li>
-                <li>Listen</li>
-                <li>Surface truth</li>
+                <li>Become an active learner</li>
+                <li>Improve the art of listening</li>
+                <li>Improve your retention</li>
               </ul>
               <%= content_tag :p, academics_read_more_link('socratically') %>
             </div>
