home page images

--- a/app/views/shared/_features.erb
+++ b/app/views/shared/_features.erb
@@ -8,13 +8,17 @@
 
   <div class="row feature">
     <div class="col-md-6 info">
-      <h4>Ask and answer the biggest questions humanity has ever encountered...</h4>
+      <h4>Here, you get the opportunity to ask and answer the biggest questions humanity has ever encountered…
+      </h4>
       <p>
-        This is just some filler text.  This is just some filler text. This is just some filler text.
+        The college core ought to pursue life’s great questions if students are to formulate a framework for
+        their everyday existence. So, we offer a graduate style environment where students take a greater
+        role in the classroom. When discussing the great questions, your input is just as important as your
+        professor’s.
       </p>
     </div>
-    <div class="col-md-6 image" %>
-      <%= image_tag 'focus-01.png', class:'img-responsive' %>
+    <div class="col-md-6 image">
+      <%= image_tag 'questions.jpg', class:'img-responsive img-rounded' %>
     </div>
   </div>
 
@@ -24,11 +28,13 @@
     <div class="col-md-6 info">
       <h4>...with the best minds the Western tradition has ever produced...</h4>
       <p>
-        This is just some filler text.  This is just some filler text. This is just some filler text.
+        The college core ought to include the best works available if it is to develop the best students
+        possible. So, we offer a Great Books curriculum where you, your colleagues and your faculty dialogue
+        with the greatest that has ever been thought and said.
       </p>
     </div>
     <div class="col-md-6 image" %>
-      <%= image_tag 'biblical_narrative.png', class:'img-responsive' %>
+      <%= image_tag 'classically.jpg', size:'371x246', class:'img-responsive img-rounded' %>
     </div>
   </div>
 
@@ -36,13 +42,16 @@
 
   <div class="row feature">
     <div class="col-md-6 info">
-      <h4>...all in the context of the greatest story ever told -- the Bible</h4>
+      <h4>...all in the context of the greatest story ever told -- the Bible.</h4>
       <p>
-        This is just some filler text.  This is just some filler text. This is just some filler text.
+        The college core ought to carry a right posture before the Creator if students are have a right view
+        of His creation. So, we consider the Bible as the greatest of all great books and the ultimate
+        authoritative source. All subjects are tied into God’s Story and designed to give you a biblical
+        worldview perspective on all of life.
       </p>
     </div>
     <div class="col-md-6 image" %>
-      <%= image_tag 'focus-01.png', class:'img-responsive' %>
+      <%= image_tag 'bible.jpg', size:'371x246', class:'img-responsive img-rounded' %>
     </div>
   </div>
 
