--- a/app/views/shared/_features.erb
+++ b/app/views/shared/_features.erb
@@ -8,7 +8,7 @@
 
   <div class="row feature">
     <div class="col-md-6 info">
-      <h4>Here, you get the opportunity to ask and answer the biggest questions humanity has ever encountered…
+      <h4>Ask and answer the biggest questions humanity has ever encountered…
       </h4>
       <p>
         The college core ought to pursue life’s great questions if students are to formulate a framework for
