final home page push

--- a/app/views/shared/_reasons.erb
+++ b/app/views/shared/_reasons.erb
@@ -3,7 +3,7 @@
   <div class="row header">
     <div class="col-md-12">
 
-      <h3 class="m-b-xl">Experience an exceptional college core program.</h3>
+      <h3 class="m-b-xl">Emily's Experience</h3>
 
     </div>
   </div>
