--- a/app/views/shared/_features.erb
+++ b/app/views/shared/_features.erb
@@ -34,7 +34,7 @@
       </p>
     </div>
     <div class="col-md-6 image" %>
-      <%= image_tag 'classically.jpg', size:'371x246', class:'img-responsive img-rounded' %>
+      <%= image_tag 'Booksforhome.jpg', size:'371x246', class:'img-responsive img-rounded' %>
     </div>
   </div>
 
