--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -17,11 +17,6 @@
 
         <h3>Send us a message</h3>
 
-        <p>
-          You can contact us with anything related to San Diego Christian's Rivendell Program.<br/>
-          We'll get in touch with you as soon as possible.
-        </p>
-
         <%= render 'form' %>
       </div>
 
@@ -30,7 +25,8 @@
         <div class="address">
           <h3>Our address</h3>
           <p>
-            SDC Rivendell Program<br />
+            San Diego Christian College<br />
+            Rivendell Program<br />
             6820 Auto Club Road, Suite T<br />
             Bloomington, MN  55438<br />
             USA
