--- a/app/views/shared/_features.erb
+++ b/app/views/shared/_features.erb
@@ -26,7 +26,7 @@
 
   <div class="row feature backwards">
     <div class="col-md-6 info">
-      <h4>...with the best minds the Western tradition has ever produced...</h4>
+      <h4>...with the best minds civilization has ever produced...</h4>
       <p>
         The college core ought to include the best works available if it is to develop the best students
         possible. So, we offer a Great Books curriculum where you, your colleagues and your faculty dialogue
