--- a/app/views/site_pages/_holy_healthy_living.erb
+++ b/app/views/site_pages/_holy_healthy_living.erb
@@ -1,5 +1,5 @@
 <p>
-  Encapsulated in the Rivendell program philosophy is the goal to spur students onto understanding their health
+  Encapsulated in the Rivendell Program philosophy is the goal to spur students onto understanding their health
   holistically.  This means taking into consideration how you treat your body and your soul, paying attention
   to how self-care bolsters physiology, space and cleanliness affects psychology, how self-discipline yields
   productivity, and how habits determine proclivity.  Our program accepts the Bible’s assertion that man’s body
