--- a/app/views/site_pages/about.html.erb
+++ b/app/views/site_pages/about.html.erb
@@ -10,7 +10,7 @@
           thrives on making the Bible come alive. Our faculty and administration desire each
           and every student to purposefully seek after God in all they do, to pursue an
           incredible educational experience and to learn how to become the next generation
-          of Godly leaders.Rivendell 5 Pursuits Program is an accredited program of San
+          of Godly leaders.  The Rivendell Program is an accredited program of San
           Diego Christian.
         </p>
 
