--- a/app/views/site_pages/academics.html.erb
+++ b/app/views/site_pages/academics.html.erb
@@ -2,8 +2,7 @@
   <div class="container">
 
     <div class="row header">
-      <h3>Journey through an exceptional college core curriculum.</h3>
-      <p><strong>8 ways</strong> you experience the liberal arts with the Rivendell Program:</p>
+      <h3>Imagine a college program that prepares you for life:</h3>
     </div>
 
     <div class="row">
@@ -165,8 +164,7 @@
 
     <div class="row header">
       <div class="col-md-12">
-        <h2>Imagine a college program that prepares you for life!</h2>
-        <p>SDC Rivendell equips you with with the foundations to succeed in college and in life.</p>
+        <h2>Foundations to succeed in college and in life.</h2>
       </div>
     </div>
 
