--- a/app/views/site_pages/_tuition_pane.erb
+++ b/app/views/site_pages/_tuition_pane.erb
@@ -1,6 +1,6 @@
 <div class="col-md-6 info">
 
-  <h4>All-inclusive college experience</h4>
+  <h4>All-inclusive college experience:</h4>
 
   <p>
     San Diego Christian’s Rivendell program on our Minnesota campus is an “all-inclusive” college experience.  There are four total
@@ -91,7 +91,7 @@
     <li>Personal expenses, including transportation to/from home for semester breaks, etc.</li>
   </ul>
 
-  <h4>Deposits (One-Time):</h4>
+  <h4>Deposits (one-time):</h4>
 
   <ul>
     <li>U.S. Student Enrollment Reservation Deposit (applied to first semester tuition): $500</li>
@@ -100,7 +100,7 @@
       This deposit is fully refundable should an International student’s visa application be denied.): $1000</li>
   </ul>
 
-  <h4>Tuition Lock Guarantee:</h4>
+  <h4>Tuition lock guarantee:</h4>
 
   <p>
     The cost of tuition will remain the same throughout the four consecutive semesters of a student’s
