--- a/app/views/site_pages/sequentially.html.erb
+++ b/app/views/site_pages/sequentially.html.erb
@@ -81,7 +81,7 @@
 
           <p>
             <strong>Important note:</strong><br />
-            SDC Rivendell holds that history, composition, and speech are to be an integral part of every
+            Our program holds that history, composition, and speech are to be an integral part of every
             academic module and thus not taught separately (compartmentalized). For example, when approaching
             History, we call upon the wisdom of Neil Postman who believes history should be the focal point
             when studying each discipline. He writes,
